force-app/main/default/objects/International_Dealsheet__mdt/International_Dealsheet__mdt.object-meta.xml
<CustomObject>
    <label>International Dealsheet</label>
    <pluralLabel>International Dealsheets</pluralLabel>
</CustomObject>