force-app/main/default/objects/International_Dealsheet__mdt/fields/BTL_URL__c.field-meta.xml
<CustomField>
    <fullName>BTL_URL__c</fullName>
    <defaultValue>&apos;&amp;queryid=[DSDLDOM]a0W2v000017vhNsEAI,[DSRINT]a0W2v000017vhO1EAI,[DSRUNU]a0W2v000017vhO3EAI,[DSDLINT]a0W2v000017vhO2EAI,[DSDENU]a0W2v000017vhNrEAI,[ExBaDOM]a0W2v000018Fi92EAC,[PenDOM]a0W2v000018Fi98EAC,[AdvResDOM]a0W2v000018Fi91EAC,[DSACD]a0W2v000017vhO4EAI,[DSACI]a0W2v000017vhNxEAI,[DSJQ]a0W2v000017vhNtEAI,[DSRDOM]a0W2v000017vhNuEAI,[DSTMCI]a0W2v000017vhNvEAI,[NAMFA]a0W2v000017vhO6EAI,[NAMJCD]a0W2v000017vhO7EAI,[JAPJCD]a0W2v000017vhO8EAI,[CHNJCD2]a0W2v000017vhO9EAI,[CHNJCD3]a0W2v000017vhOAEAY,[CHNYBH]a0W2v000017vhOBEAY,[HKGJCD]a0W2v000017vhOCEAY,[HKGFA]a0W2v000017vhODEAY,[IDSJCD]a0W2v000017vhOEEAY,[PHIJCD]a0W2v000017vhOFEAY,[PNGJCD]a0W2v000017vhOmEAI,[VITJCD]a0W2v000017vhOGEAY,[KORJCD]a0W2v000017vhOHEAY,[TAIJCD]a0W2v000017vhOIEAY,[INDJCD]a0W2v000017vhOJEAY,[SRIJCD]a0W2v000017vhOKEAY,[EURJCD]a0W2v000017vhOLEAY,[EURFA]a0W2v000017vhOMEAY,[MIEJCD]a0W2v000017vhONEAY,[MIEFA]a0W2v000017vhOOEAY,[AFR1JCD]a0W2v000017vhOPEAY,[AFRFA]a0W2v000017vhOQEAY,[AFR2JCD]a0W2v000017vhOREAY,[SIGJCD]a0W2v000017vhOSEAY,[SIGFa]a0W2v000017vhOTEAY,[THAFA]a0W2v000017vhOUEAY,[THAJCD]a0W2v000017vhOVEAY,[MALJCD]a0W2v000017vhOWEAY,[MALFA]a0W2v000017vhOXEAY,[NZJCD]a0W2v000017vhOYEAY,[NZB]a0W2v000017vhOZEAY,[NZFA]a0W2v000017vhOaEAI,[NZY]a0W2v000017vhObEAI,[NZK]a0W2v000017vhOcEAI,[NZH]a0W2v000017vhOdEAI,[SAMJCD]a0W2v000017vhNwEAI,[PEW]a0W2v000017vhO0EAI,[MEYBH1]a0W2v000017vhNzEAI,[MEYBH2]a0W2v000017vhNyEAI,[MEYBH3]a0W2v000017vhO5EAI,[ADINT]a0W2v000017vhOeEAI,[RDINT]a0W2v000017vhOfEAI,[FFINT]a0W2v000017vhOgEAI,[PEINT]a0W2v000017vhOhEAI,[EBINT]a0W2v000017vhOiEAI,[IFINT]a0W2v000018ABefEAG,[SPDOM]a0W2v000017vhOlEAI,[SPINT]a0W2v000017vhOkEAI&amp;QVar0ID=a0W2v000017vhNrEAI?pv0=&apos;</defaultValue>
    <label>BTL URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>