force-app/main/default/objects/International_Dealsheet__mdt/fields/PDF_URI__c.field-meta.xml
<CustomField>
    <fullName>PDF_URI__c</fullName>
    <defaultValue>&apos;&amp;TemplateId=a0X2v00000OEKgkEAH&amp;DefaultPDF=1&amp;DS7=1&amp;DS7Preview=1&amp;FP0=1;&apos;</defaultValue>
    <label>PDF URI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>